# Twitchbot

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Makefile  README.md  bot.js  build.sh  config.json  main.cpp  meson.build  package-lock.json  package.json  tsconfig.json  twitchbot  userdata.json
includes/: bot.hpp  command.hpp  commandhandler.hpp  paramparser.hpp  parser.hpp  timerhandler.hpp
includes/commands/: addtimer.hpp  changeprefix.hpp  editresult.hpp  edittimer.hpp  helpcommand.hpp  lurkcommand.hpp  pingcommand.hpp  removetimer.hpp
src/: .env  bot.cpp  bot.ts  commandhandler.cpp  config.model.ts  main.cpp  meson.build  paramparser.cpp  parser.cpp  timerhandler.cpp
src/commands/: addtimer.cpp  changeprefix.cpp  editresult.cpp  edittimer.cpp  helpcommand.cpp  lurkcommand.cpp  pingcommand.cpp  removetimer.cpp
src/config/: config.ts
src/modules/: modules.ts
src/modules/default/: commands.ts  greet.ts  index.ts  ping.ts
src/modules/games/: index.ts
src/modules/modsonly/: index.ts
src/modules/socials/: discord.ts  index.ts  twitter.ts
src/modules/subonly/: index.ts
src/utils/: command.ts  commandContext.ts  handler.ts  messageHandler.ts
